--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -91,14 +91,14 @@ collections:
           - { label: 'Title', name: 'title', widget: 'string' }
           - { label: 'Body', name: 'body', widget: 'markdown' }
       - file: 'src/pages/services/index.md'
-        label: 'Products Page'
-        name: 'products'
+        label: 'Services Page'
+        name: 'services'
         fields:
           - {
               label: 'Template Key',
               name: 'templateKey',
               widget: 'hidden',
-              default: 'product-page',
+              default: 'services-page',
             }
           - { label: Title, name: title, widget: string }
           - { label: Image, name: image, widget: image }
@@ -153,7 +153,7 @@ collections:
               label: 'Template Key',
               name: 'templateKey',
               widget: 'hidden',
-              default: 'product-page',
+              default: 'directions-page',
             }
           - { label: Title, name: title, widget: string }
           - { label: Subtitle, name: subtitle, widget: string }
