--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -79,7 +79,7 @@ collections:
                 ],
             }
       - file: 'src/pages/about/index.md'
-        label: 'About'
+        label: 'About Page'
         name: 'about'
         fields:
           - {
